--- a/Blindness & Diabetic Retinopathy Detection/Blindness Detection Script.ipynb
+++ b/Blindness & Diabetic Retinopathy Detection/Blindness Detection Script.ipynb
@@ -796,7 +796,9 @@
     "embedding_z_dim = 64\n",
     "size_mult = 32\n",
     "\n",
-    "epochs = 3"
+    "epochs = 3\n",
+    "\n",
+    "is_trained = False"
    ]
   },
   {
@@ -1089,6 +1091,10 @@
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "D = D()\n",
+    "if os.path.exists(str(D_model_path)):\n",
+    "    D.load_state_dict(torch.load(D_model_path))\n",
+    "    is_trained = True\n",
+    "    \n",
     "O = O()\n",
     "O.apply(weights_init)\n",
     "G = G()\n",
@@ -1231,54 +1237,54 @@
     "    valid_data_loader = torch.utils.data.DataLoader(dataset, batch_size=batch_size, num_workers=8, \n",
     "                                                    sampler=valid_sampler)\n",
     "    \n",
-    "    \n",
-    "    ####\n",
-    "    steps = 0\n",
-    "    d_running_loss = 0\n",
-    "    g_running_loss = 0\n",
-    "    print_every = 5\n",
-    "    \n",
-    "    # Train on training data\n",
-    "    for epoch in range(epochs):\n",
-    "        label_counts = np.zeros((classes, 1))\n",
-    "        for inputs, labels in train_data_loader:\n",
-    "            steps += 1\n",
-    "            # Move input and label tensors to the default device\n",
-    "            real_x = inputs\n",
-    "            bs = real_x.size(0)\n",
-    "            if (bs!=batch_size):\n",
-    "                continue\n",
+    "    if is_trained == False:\n",
+    "        ####\n",
+    "        steps = 0\n",
+    "        d_running_loss = 0\n",
+    "        g_running_loss = 0\n",
+    "        print_every = 5\n",
     "\n",
-    "            d_loss=0\n",
-    "            g_loss=0\n",
-    "            d_loss_accum=0\n",
+    "        # Train on training data\n",
+    "        for epoch in range(epochs):\n",
+    "            label_counts = np.zeros((classes, 1))\n",
+    "            for inputs, labels in train_data_loader:\n",
+    "                steps += 1\n",
+    "                # Move input and label tensors to the default device\n",
+    "                real_x = inputs\n",
+    "                bs = real_x.size(0)\n",
+    "                if (bs!=batch_size):\n",
+    "                    continue\n",
     "\n",
-    "            # D-E1\n",
-    "            optimD.zero_grad()\n",
-    "            d_loss_accum=0\n",
-    "            for batch_num in range(accumuated_rnd):\n",
-    "                logps_d = D((real_x[batch_num*accumuated_num:(batch_num+1)*accumuated_num,:,:,:].to(device), False))\n",
-    "                loss_real = criterionD(logps_d, labels[batch_num*accumuated_num:(batch_num+1)*accumuated_num].to(device))\n",
+    "                d_loss=0\n",
+    "                g_loss=0\n",
+    "                d_loss_accum=0\n",
     "\n",
-    "                with amp.scale_loss(loss_real, optimD) as scaled_loss:\n",
-    "                    scaled_loss.backward()\n",
+    "                # D-E1\n",
+    "                optimD.zero_grad()\n",
+    "                d_loss_accum=0\n",
+    "                for batch_num in range(accumuated_rnd):\n",
+    "                    logps_d = D((real_x[batch_num*accumuated_num:(batch_num+1)*accumuated_num,:,:,:].to(device), False))\n",
+    "                    loss_real = criterionD(logps_d, labels[batch_num*accumuated_num:(batch_num+1)*accumuated_num].to(device))\n",
     "\n",
-    "                d_loss_accum += loss_real\n",
+    "                    with amp.scale_loss(loss_real, optimD) as scaled_loss:\n",
+    "                        scaled_loss.backward()\n",
     "\n",
-    "            optimD.step()\n",
-    "            d_loss += d_loss_accum.item() / accumuated_rnd\n",
-    "            g_loss += 0\n",
+    "                    d_loss_accum += loss_real\n",
+    "\n",
+    "                optimD.step()\n",
+    "                d_loss += d_loss_accum.item() / accumuated_rnd\n",
+    "                g_loss += 0\n",
     "\n",
     "\n",
-    "            d_running_loss += d_loss\n",
-    "            g_running_loss += g_loss\n",
+    "                d_running_loss += d_loss\n",
+    "                g_running_loss += g_loss\n",
     "\n",
-    "            if steps % print_every == 0:\n",
-    "                print(f\"Epoch {epoch+1}/{epochs}.. \"\n",
-    "                      f\"Dloss: {d_running_loss/print_every:.3f}.. \"\n",
-    "                      f\"Gloss: {g_running_loss/print_every:.3f}.. \")\n",
-    "                d_running_loss = 0\n",
-    "                g_running_loss = 0\n",
+    "                if steps % print_every == 0:\n",
+    "                    print(f\"Epoch {epoch+1}/{epochs}.. \"\n",
+    "                          f\"Dloss: {d_running_loss/print_every:.3f}.. \"\n",
+    "                          f\"Gloss: {g_running_loss/print_every:.3f}.. \")\n",
+    "                    d_running_loss = 0\n",
+    "                    g_running_loss = 0\n",
     "    \n",
     "    \n",
     "    \n",
@@ -1310,7 +1316,12 @@
     "\n",
     "    print(f\"Validation loss: {test_loss/len(valid_data_loader):.3f}.. \"\n",
     "          f\"Validation accuracy: {accuracy/len(valid_data_loader):.3f}\")\n",
-    "    D.train()"
+    "    D.train()\n",
+    "\n",
+    "if is_trained == False:\n",
+    "    # save the model parameters\n",
+    "    D_model_path = os.path.join(model_path, 'D.pkl')\n",
+    "    torch.save(D.model.state_dict(), D_model_path)"
    ]
   },
   {
